до изменения типа releaseDate на string
