# docs/swagger.json
@@ -36,14 +36,26 @@
                     },
                     {
                         "type": "string",
-                        "description": "Поле для сортировки",
+                        "description": "Фильтр по ссылке",
+                        "name": "link",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Фильтр по тексту или фрагменту тектса",
+                        "name": "text",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Поле для сортировки asc для возрастания и desc для убывания",
                         "name": "sort",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "default": 1,
-                        "description": "Номер страницы",
+                        "description": "Номер страницы(пагинация)",
                         "name": "page",
                         "in": "query"
                     },
@@ -125,9 +137,16 @@
                         "description": "Данные песни",
                         "name": "song",
                         "in": "body",
-                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.Song"
+                        }
+                    },
+                    {
+                        "description": "Дополнительные данные песни",
+                        "name": "songDetails",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.SongDetails"
                         }
                     }
                 ],
@@ -191,6 +210,20 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Номер страницы(пагинация)",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 5,
+                        "description": "Лимит куплетов на странице",
+                        "name": "limit",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -209,9 +242,6 @@
             "description": "Модель песни",
             "type": "object",
             "properties": {
-                "SongDetail": {
-                    "$ref": "#/definitions/models.SongDetails"
-                },
                 "group": {
                     "description": "Название группы",
                     "type": "string"
@@ -223,6 +253,7 @@
             }
         },
         "models.SongDetails": {
+            "description": "Модель дополнительных данных песни",
             "type": "object",
             "properties": {
                 "link": {
