# models/song.go
@@ -2,21 +2,22 @@ package models
 
 import (
 	"time"
-
-	"gorm.io/gorm"
 )
 
 // Song представляет собой модель песни.
 // @Description Модель песни
 type Song struct {
-	gorm.Model  `swaggerignore:"true"`
-	Group       string      `json:"group"` //Название группы
-	Song        string      `json:"song"`  //Название песни
-	SongDetails SongDetails `json:"SongDetail"`
+	Id          int         `swaggerignore:"true" gorm:"primaryKey"`
+	Group       string      `json:"group"`                                                    //Название группы
+	Song        string      `json:"song"`                                                     //Название песни
+	SongDetails SongDetails `json:"SongDetail" swaggerignore:"true" gorm:"foreignKey:SongId"` //связь один к одному
 }
 
+// SongDetails представляет собой модель дополнительных данных песни.
+// @Description Модель дополнительных данных песни
 type SongDetails struct {
-	Text        string    `json:"text"`        //Текст песни
-	ReleaseDate time.Time `json:"releaseDate"` //Дата выхода песни
-	Link        string    `json:"link"`        //Ссылка на песню
+	SongId      int       `swaggerignore:"true"` //Внешний ключ
+	Text        string    `json:"text"`          //Текст песни
+	ReleaseDate time.Time `json:"releaseDate"`   //Дата выхода песни
+	Link        string    `json:"link"`          //Ссылка на песню
 }
